Working With Deep Tech gradient

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ animatedBackgroundColor: true
     {% include breadcrumb.html teaser="Control <br /> Your Data" %}
   </section>
 
-  <section class="section --home-working-with-big-tech" id="home-working-with-big-tech" data-video-name="creek">
+  <section class="section --home-working-with-big-tech" id="home-working-with-big-tech">
     <div class="__body">
       <p class="p2 __typing-text-source --typed-string">Working with Deep Tech, not against them.</p>
       <p class="p2">
