--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ animatedBackgroundColor: true
 
   <section class="section --home-privacy-platform" id="home-privacy-platform" data-video-name="flowing">
     <div class="__body">
-      <p class="p2 __typing-text-source --typed-string">River is a platform for your data, where you have control, insight and where you make money.</p>
+      <p class="p2 __typing-text-source --typed-string">River is a platform for your data, providing control and insight <span class="--italic">and</span> helping you make money.</p>
       <div>
         <p class="p2 --no-vmargin __typing-text-target"></p>
       </div>
@@ -227,7 +227,7 @@ animatedBackgroundColor: true
       </p>
 
       <ul class="p1 hidden-copy">
-        <li class="p1">River uses a capabilities (CAPS) based structure rather than an identities-based sharing model for your data. CAPS allows for fine-grain permissioning, which gives you more control over who can access your data through the use of pointers.</li>
+        <li class="p1">River uses a capabilities (CAPS) based structure rather than an identities-based sharing model for your data. CAPS allows for fine-grain permissioning, which gives you more control over who can access your data.</li>
         <li class="p1">River makes it easier for technology teams to be compliant with current and future privacy laws. Through our data management platform,
           app developers and advertisers can integrate our service with their products, giving their users an easy and effective solution to control their data.
           Using the principle of least authority (POLA), app developers can acquire and use the data objects they need without accessing the rest of the data being generated.
@@ -331,9 +331,39 @@ animatedBackgroundColor: true
           <p class="p3 --yellow">Resources</p>
 
           <p class="p1">GLOSSARY</p>
-          <p class="p1">Technical terms and ideas to expand your understanding.</p>
+          <p class="p1">Technical explanations and information to learn more about capabilities-based sharing and other concepts.</p>
           <p class="p1">INDEPENDENT SOURCES</p>
-          <p class="p1">White papers, articles, and information from unbiased sources.</p>
+          <ul>
+            <li>
+              <a class="p1" href="http://eliassi.org/lanier_and_weyl_hbr2018.pdf" title="A Blueprint for a Better Digital Society">A Blueprint for a Better Digital Society</a>
+              &mdash;
+              Jaron Lanier and E. Glen Weyl
+            </li>
+
+            <li>
+              <a class="p1" href="https://www.youtube.com/watch?v=qQ-PUXPVlos" title="How we need to remake the internet">How we need to remake the internet</a>
+              &mdash;
+              Jaron Lanier
+            </li>
+
+            <li>
+              <a class="p1" href="https://freecontent.manning.com/capability-based-security-and-macaroons/" title="Capability-Based Security and Macaroons">Capability-Based Security and Macaroons</a>
+              &mdash;
+              Manning.com
+            </li>
+
+            <li>
+              <a class="p1" href="https://medium.com/@kleffew/what-is-capability-based-security-227c6e5483a5" title="What is Capability-based Security?">What is Capability-based Security?</a>
+              &mdash;
+              Kevin Leffew
+            </li>
+
+            <li>
+              <a class="p1" href="https://www.beyondtrust.com/blog/entry/what-is-least-privilege" title="What Is Least Privilege & Why Do You Need It?">What Is Least Privilege & Why Do You Need It?</a>
+              &mdash;
+              Matt Miller, BeyondTrust.com 
+            </li>
+          </ul>
           <p class="p1">FAQ</p>
           <p class="p1">You have questions. We have answers.</p>
           <p class="p1">Ready to start getting paid for your data?</p>
