--- a/signup.html
+++ b/signup.html
@@ -28,8 +28,10 @@ initialSection: "signup"
         <div id="mc_embed_signup_scroll">
           <p class="p2">Subscribe</p>
           <p class="p1">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Privacy is a cornerstone of our brand. We won’t share your contact
+            information, nor will we fill your inbox with unnecessary messages.
+            Just occasional updates to keep you informed about opportunities to
+            benefit from River.
           </p>
           <div class="p1 mc-field-group">
             <input
