--- a/streams.html
+++ b/streams.html
@@ -50,5 +50,6 @@ initialSection: "streams"
     <img src="{{ site.baseurl }}/assets/img/streams-1.jpg" alt="Riverbank" />
     <img src="{{ site.baseurl }}/assets/img/streams-2.jpg" alt="Riverbank" />
     <img src="{{ site.baseurl }}/assets/img/streams-3.jpg" alt="Riverbank" />
+    <img src="{{ site.baseurl }}/assets/img/streams-1.jpg" alt="Riverbank" />
   </div>
 </section>
