--- a/riverbank.html
+++ b/riverbank.html
@@ -42,5 +42,9 @@ initialSection: "riverbank"
       alt="Riverbank"
     />
     <img src="{{ site.baseurl }}/assets/img/riverbank-3.jpg" alt="Riverbank" />
+    <img
+      src="{{ site.baseurl }}/assets/img/riverbank-1-16-9.jpg"
+      alt="Riverbank"
+    />
   </div>
 </section>
