Remove scroll cover from "Who is using your data" section

--- a/index.html
+++ b/index.html
@@ -143,71 +143,65 @@ animatedBackgroundColor: true
   </section>
 
   <section class="section --home-who-is-using-your-data" id="home-who-is-using-your-data" data-video-name="creek">
-    <div class="__scroll-cover">&nbsp;</div>
     <div class="__body">
       <p class="p2 __typing-text-source --typed-string">Who is using your data?</p>
       <p class="p2">
         <span class="__typing-text-target"></span>
       </p>
 
-      <div class="__scroll-copy">
-        <div class="col3 hidden-copy">
-          <div class="__card">
-            <p class="p3">Who's tracking you now?</p>
-            <p class="p4 --no-vmargin">Assume Everyone is tracking you.</p>
-            <p class="p1 --no-vmargin">
-              Social media channels, search engines, websites, apps, games, personal
-              assistants, sensors, smartphones, smart cars, smart TVs, and smart
-              anything.
-            </p>
-          </div>
+      <div class="col3 hidden-copy">
+        <div class="__card">
+          <p class="p3">Who's tracking you now?</p>
+          <p class="p4 --no-vmargin">Assume Everyone is tracking you.</p>
+          <p class="p1 --no-vmargin">
+            Social media channels, search engines, websites, apps, games, personal
+            assistants, sensors, smartphones, smart cars, smart TVs, and smart
+            anything.
+          </p>
+        </div>
 
-          <div class="__card">
-            <p class="p3">How do they track you?</p>
-            <p class="p4 --no-vmargin">Beyond Cookies</p>
-            <p class="p1 --no-vmargin">
-              Super-cookies, embedded scripts, fingerprinters, cross-device tracking,
-              click-throughs, web beacons, favicons - and more, all silently stealing
-              your data.
-            </p>
-          </div>
+        <div class="__card">
+          <p class="p3">How do they track you?</p>
+          <p class="p4 --no-vmargin">Beyond Cookies</p>
+          <p class="p1 --no-vmargin">
+            Super-cookies, embedded scripts, fingerprinters, cross-device tracking,
+            click-throughs, web beacons, favicons - and more, all silently stealing
+            your data.
+          </p>
+        </div>
 
-          <div class="__card">
-            <p class="p3">What can I control?</p>
-            <p class="p4 --no-vmargin">You Own Your Data</p>
-            <p class="p1 --no-vmargin">
-              With River, you decide which services can have access to your data, as
-              well as what kind of access they can have. You can rent, sell, or lease
-              the information to them or deny them altogether. The decision is yours.
-            </p>
-          </div>
+        <div class="__card">
+          <p class="p3">What can I control?</p>
+          <p class="p4 --no-vmargin">You Own Your Data</p>
+          <p class="p1 --no-vmargin">
+            With River, you decide which services can have access to your data, as
+            well as what kind of access they can have. You can rent, sell, or lease
+            the information to them or deny them altogether. The decision is yours.
+          </p>
         </div>
       </div>
     </div>
   </section>
 
   <section class="section --home-who-is-using-your-data-2" id="home-who-is-using-your-data-2" data-video-name="creek">
-    <div class="__scroll-cover">&nbsp;</div>
     <div class="__body">
       <p class="p2">Who is using your data?</p>
       
-      <div class="__scroll-copy">
-        <div class="flex-col3">
-          <div class="__card hidden-copy --right">
-            <p class="p3">What can I do with my data?</p>
-            <p class="p4 --no-vmargin">You Have Options</p>
-            <p class="p1 --no-vmargin">
-              Store it, sanitize it, share it, secure it, or sell it, then confidently delete your account. Or not.
-            </p>
-          </div>
+      <div class="flex-col3">
+        <div class="__card hidden-copy">
+          <p class="p3">What can I do with my data?</p>
+          <p class="p4 --no-vmargin">You Have Options</p>
+          <p class="p1 --no-vmargin">
+            Store it, sanitize it, share it, secure it, or sell it, then confidently delete your account. Or not.
+          </p>
+        </div>
 
-          <div class="__card --col2 hidden-copy --right">
-            <p class="p3">Wait – I own my data? What does that mean?</p>
-            <p class="p4 --no-vmargin">100% Yours</p>
-            <p class="p1 --no-vmargin">
-              The GDPR in the EU and the CCPA in California are two examples of privacy legislation, and according to Gartner, 65% of the global population will enjoy protection of their personal data through some form of regulation.
-            </p>
-          </div>
+        <div class="__card --col2 hidden-copy">
+          <p class="p3">Wait – I own my data? What does that mean?</p>
+          <p class="p4 --no-vmargin">100% Yours</p>
+          <p class="p1 --no-vmargin">
+            The GDPR in the EU and the CCPA in California are two examples of privacy legislation, and according to Gartner, 65% of the global population will enjoy protection of their personal data through some form of regulation.
+          </p>
         </div>
       </div>
     </div>
