Revamp navigation, hamburger menu works across pages

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 title: River
 layout: default
 lineDrawing: true
+pageId: index
 videos: { rough: true, flowing: true, creek: true }
 animatedBackgroundColor: true
 ---
@@ -315,31 +316,31 @@ animatedBackgroundColor: true
           <p class="p1">INDEPENDENT SOURCES</p>
           <ul>
             <li>
-              <a class="p1" href="http://eliassi.org/lanier_and_weyl_hbr2018.pdf" title="A Blueprint for a Better Digital Society">A Blueprint for a Better Digital Society</a>
+              <a class="p1" href="http://eliassi.org/lanier_and_weyl_hbr2018.pdf">A Blueprint for a Better Digital Society</a>
               &mdash;
               Jaron Lanier and E. Glen Weyl
             </li>
 
             <li>
-              <a class="p1" href="https://www.youtube.com/watch?v=qQ-PUXPVlos" title="How we need to remake the internet">How we need to remake the internet</a>
+              <a class="p1" href="https://www.youtube.com/watch?v=qQ-PUXPVlos">How we need to remake the internet</a>
               &mdash;
               Jaron Lanier
             </li>
 
             <li>
-              <a class="p1" href="https://freecontent.manning.com/capability-based-security-and-macaroons/" title="Capability-Based Security and Macaroons">Capability-Based Security and Macaroons</a>
+              <a class="p1" href="https://freecontent.manning.com/capability-based-security-and-macaroons/">Capability-Based Security and Macaroons</a>
               &mdash;
               Manning.com
             </li>
 
             <li>
-              <a class="p1" href="https://medium.com/@kleffew/what-is-capability-based-security-227c6e5483a5" title="What is Capability-based Security?">What is Capability-based Security?</a>
+              <a class="p1" href="https://medium.com/@kleffew/what-is-capability-based-security-227c6e5483a5">What is Capability-based Security?</a>
               &mdash;
               Kevin Leffew
             </li>
 
             <li>
-              <a class="p1" href="https://www.beyondtrust.com/blog/entry/what-is-least-privilege" title="What Is Least Privilege & Why Do You Need It?">What Is Least Privilege & Why Do You Need It?</a>
+              <a class="p1" href="https://www.beyondtrust.com/blog/entry/what-is-least-privilege">What Is Least Privilege &amp; Why Do You Need It?</a>
               &mdash;
               Matt Miller, BeyondTrust.com 
             </li>
