Update Riverbank + StreamS copy

--- a/riverbank.html
+++ b/riverbank.html
@@ -9,28 +9,20 @@ initialSection: "riverbank"
 
 <section class="section --riverbank" id="riverbank" data-video-name="waterfall">
   <div class="__copy">
-    <p class="p2">RiverBank</p>
-    <p class="p4">Get paid for your data.</p>
-    <ul>
-      <li class="p1">
-        Your data is a new asset class – like your bank account. Your car. Your
-        house. Your ten-season box set of Friends.
-      </li>
+    <div class="__logo-and-title">
+      <img src="{{ site.baseurl }}/assets/img/riverbank.png" alt="Riverbank" />
+      <div>
+        <p class="p2">RiverBank</p>
+        <p class="p1">A marketplace, a payment platform, and more.</p>
+      </div>
+    </div>
 
-      <li class="p1">
-        RiverBank is a marketplace that connects the data you create with
-        everyone – business, Big Tech, and advertisers – interested in paying
-        you for it.
-      </li>
-
-      <li class="p1">
-        Convert your data – only the parts you want to sell – into real money.
-      </li>
-      <li class="p1">
-        The possibilities are endless, and there's no wrong way to safely share
-        your data.
-      </li>
-    </ul>
+    <p class="p1">Your data is a new asset class – like your car. Your house. Your ten-season box set of Friends on DVD.</p>
+    <p class="p1">RiverBank is a marketplace where you can sell, lease, or rent your de- identified data to organizations eager to pay for it: businesses, Big Tech, app developers, and advertisers. And that’s just the tip of the iceberg.</p>
+    <p class="p1">RiverBank is your digital wallet, where you can store the fiat money earned from your data. Pay in and pay out, securely, easily, and directly with hard cash, not digital coins. Stop giving away your data.
+      <br />
+      Join River today.
+    </p>
   </div>
 
   <div class="__images">
