Signup copy updates

--- a/index.html
+++ b/index.html
@@ -217,10 +217,7 @@ animatedBackgroundColor: true
 
       <ul class="p1 hidden-copy">
         <li class="p1">River uses a capabilities (CAPS) based structure rather than an identities-based sharing model for your data. CAPS allows for fine-grain permissioning, which gives you more control over who can access your data.</li>
-        <li class="p1">River makes it easier for technology teams to be compliant with current and future privacy laws. Through our data management platform,
-          app developers and advertisers can integrate our service with their products, giving their users an easy and effective solution to control their data.
-          Using the principle of least authority (POLA), app developers can acquire and use the data objects they need without accessing the rest of the data being generated.
-        </li>
+        <li class="p1">River makes it easier for technology teams to be compliant with current and future privacy laws. Through our data management platform, app developers and advertisers can integrate our service with their products, giving their users an easy and effective solution to control their data. Using the principle of least authority (POLA), app developers can acquire and use the data objects they need without accessing the rest of the data being generated.</li>
         <li class="p1">Fine-grain permissioning keeps your data secure, while POLA enables you to choose who can see the slice of data you want to share with them.</li>
       </ul>
     </div>
