--- a/signup.html
+++ b/signup.html
@@ -27,12 +27,9 @@ initialSection: "signup"
         novalidate
       >
         <div id="mc_embed_signup_scroll">
-          <p class="p2">Subscribe</p>
+          <p class="p2">Get More From &mdash; and For &mdash; Your Data</p>
           <p class="p1">
-            Privacy is a cornerstone of our brand. We won’t share your contact
-            information, nor will we fill your inbox with unnecessary messages.
-            Just occasional updates to keep you informed about opportunities to
-            benefit from River.
+            Privacy is the cornerstone of our brand. We won’t share your contact information, nor will we fill your inbox with unnecessary messages. Just occasional updates to keep you informed about news about River.
           </p>
           <div class="p1 mc-field-group">
             <input
