--- a/riverbank.html
+++ b/riverbank.html
@@ -9,7 +9,7 @@ initialSection: "riverbank"
 
 <section class="section --riverbank" id="riverbank" data-video-name="waterfall">
   <div class="__copy">
-    <div class="__logo-and-title">
+    <div class="logo-and-title">
       <img src="{{ site.baseurl }}/assets/img/riverbank.png" alt="Riverbank" />
       <div>
         <p class="p2">RiverBank</p>
