--- a/streams.html
+++ b/streams.html
@@ -10,7 +10,7 @@ initialSection: "streams"
 
 <section class="section --streams" id="streams" data-video-name="rough">
   <div class="__copy">
-    <div class="__logo-and-title">
+    <div class="logo-and-title">
       <img src="{{ site.baseurl }}/assets/img/streams.png" alt="Streams" />
       <div>
         <p class="p2">StreamS</p>
