--- a/team.html
+++ b/team.html
@@ -9,7 +9,7 @@ initialSection: "team"
 
 <section class="section --team" id="team" data-video-name="waterfall">
   <div class="__copy">
-    <p class="p2">Team &amp; People</p>
+    <p class="p2 __page-title">Team &amp; People</p>
     <div class="col2">
       <div class="__card">
         <p class="p3 --caps">Key People</p>
@@ -27,7 +27,7 @@ initialSection: "team"
         </ul>
         
         <p class="p3 --caps">Professional Firms</p>
-        <ul class="p1 __list">
+        <ul class="p1 __list --no-vmargin">
           <li>Gunderson Dettmer - Legal</li>
           <li>Baker Tilly - Accounting & Bookkeeping</li>
           <li>First Republic - Banking</li>
