--- a/streams.html
+++ b/streams.html
@@ -2,13 +2,13 @@
 # streams.html
 title: Riverbank
 layout: default
-videos: { rough: true }
+videos: { streams: true }
 lineDrawing: false
 pageId: streams
 initialSection: "streams"
 ---
 
-<section class="section --streams" id="streams" data-video-name="rough">
+<section class="section --streams" id="streams" data-video-name="streams">
   <div class="__copy">
     <div class="logo-and-title">
       <img src="{{ site.baseurl }}/assets/img/streams.png" alt="Streams" />
