--- a/riverbank.html
+++ b/riverbank.html
@@ -2,12 +2,13 @@
 # riverbank.html
 title: Riverbank
 layout: default
+videos: { riverbank: true }
 lineDrawing: false
 pageId: riverbank
 initialSection: "riverbank"
 ---
 
-<section class="section --riverbank" id="riverbank" data-video-name="waterfall">
+<section class="section --riverbank" id="riverbank" data-video-name="riverbank">
   <div class="__copy">
     <div class="logo-and-title">
       <img src="{{ site.baseurl }}/assets/img/riverbank.png" alt="Riverbank" />
