Team page styled

--- a/team.html
+++ b/team.html
@@ -2,12 +2,13 @@
 # team.html
 title: Team
 layout: default
+videos: { team: true }
 lineDrawing: false
 pageId: team
 initialSection: "team"
 ---
 
-<section class="section --team" id="team" data-video-name="waterfall">
+<section class="section --team" id="team" data-video-name="team">
   <div class="__copy">
     <p class="p2 __page-title">Team &amp; People</p>
     <div class="col2">
