Resources page copy updates

--- a/index.html
+++ b/index.html
@@ -304,59 +304,51 @@ animatedBackgroundColor: true
 
   <section class="section --home-resources" id="home-resources" data-video-name="rough">
     <div class="__body">
-      <div class="col2">
-        <div class="__card">
-          <p class="p3 --yellow">Resources</p>
+      <p class="p3 --yellow">Resources</p>
+      <ul>
+        <li>
+          <a class="p1" target="_blank" href="http://eliassi.org/lanier_and_weyl_hbr2018.pdf">A Blueprint for a Better Digital Society</a>
+          &mdash;
+          Jaron Lanier and E. Glen Weyl
+        </li>
 
-          <p class="p1">GLOSSARY</p>
-          <p class="p1">Technical explanations and information to learn more about capabilities-based sharing and other concepts.</p>
-          <p class="p1">INDEPENDENT SOURCES</p>
-          <ul>
-            <li>
-              <a class="p1" href="http://eliassi.org/lanier_and_weyl_hbr2018.pdf">A Blueprint for a Better Digital Society</a>
-              &mdash;
-              Jaron Lanier and E. Glen Weyl
-            </li>
+        <li>
+          <a class="p1" target="_blank" href="https://www.apple.com/privacy/docs/A_Day_in_the_Life_of_Your_Data.pdf">A Day in the Life of Your Data</a> &mdash; via <a class="p1" target="_blank" href="https://www.apple.com">Apple.com</a>
+        </li>
+        <li>
+          <a class="p1" href="https://www.youtube.com/watch?v=qQ-PUXPVlos">How we need to remake the internet</a>
+          &mdash;
+          Jaron Lanier
+        </li>
 
-            <li>
-              <a class="p1" href="https://www.youtube.com/watch?v=qQ-PUXPVlos">How we need to remake the internet</a>
-              &mdash;
-              Jaron Lanier
-            </li>
+        <li>
+          <a class="p1" target="_blank" href="https://freecontent.manning.com/capability-based-security-and-macaroons/">Capability-Based Security and Macaroons</a>
+          &mdash;
+          <a class="p1" target="_blank" href="https://www.manning.com">Manning.com</a>
+        </li>
 
-            <li>
-              <a class="p1" href="https://freecontent.manning.com/capability-based-security-and-macaroons/">Capability-Based Security and Macaroons</a>
-              &mdash;
-              Manning.com
-            </li>
+        <li>
+          <a class="p1" target="_blank" href="https://medium.com/@kleffew/what-is-capability-based-security-227c6e5483a5">What is Capability-based Security?</a>
+          &mdash;
+          Kevin Leffew
+        </li>
 
-            <li>
-              <a class="p1" href="https://medium.com/@kleffew/what-is-capability-based-security-227c6e5483a5">What is Capability-based Security?</a>
-              &mdash;
-              Kevin Leffew
-            </li>
+        <li>
+          <a class="p1" target="_blank" href="https://www.beyondtrust.com/blog/entry/what-is-least-privilege">What Is Least Privilege &amp; Why Do You Need It?</a>
+          &mdash;
+          Matt Miller, BeyondTrust.com 
+        </li>
 
-            <li>
-              <a class="p1" href="https://www.beyondtrust.com/blog/entry/what-is-least-privilege">What Is Least Privilege &amp; Why Do You Need It?</a>
-              &mdash;
-              Matt Miller, BeyondTrust.com 
-            </li>
-          </ul>
-          <p class="p1">FAQ</p>
-          <p class="p1">You have questions. We have answers.</p>
-          <p class="p1">Ready to start getting paid for your data?</p>
-          <p class="p1">Stay informed about the updates and activities at River.</p>
-          <p class="p1">It's your data. It's your choice.</p>
-          <p>
-            <a href="{{ site.baseurl }}{% link signup.html %}" title="Sign up for River" class="button --yellow-fill">Sign up to be an early adopter</a>
-          </p>
-          <p class="p1">Still have questions? Let's chat.</p>
-        </div>
-        <div class="__card">
-          <p class="p3 --yellow">Team</p>
-          <p class="p3 --yellow">Press</p>
-          <p class="p3 --yellow">Legal</p>
-        </div>
+        <li>
+          <a class="p1" target="_blank" href="https://www.youtube.com/watch?v=zjP9JYeAS5s">A path to empowering user choice and boosting user trust in advertising</a> &mdash; Tim Cook, CPDC 2021
+        </li>
+      </ul>
+      <p class="p1">Ready to start getting paid for your data?</p>
+      <p class="p1">Stay informed about the updates and activities at River.</p>
+      <p class="p1">It's your data. It's your choice.</p>
+      <p>
+        <a href="{{ site.baseurl }}{% link signup.html %}" title="Sign up for River" class="button --yellow-fill">Sign up to be an early adopter</a>
+      </p>
     </div>
   </section>
 </div>
