text updates from Graeme and Sam
1. Streams page – Please remove the dear data link and replace it with http://www.youtube.com/watch?v=iqaVe1MCTlA, text remains the same.
2. Please add the following link to the Resources list in the footer http://www.dear-data.com/theproject - Giorgia Lupi and Stefanie Posavec
3. There used to be a line drawing on the Working with deep tech page, if we can reinstate that somewhere so that it works with the next page that would be great. Also please make the background a touch darker.
4. Your Data Belongs to You page - River’s valuable compliance tools help businesses, enterprises, and organizations comply with global laws designed to protect your privacy. (Replace second bullet with this please)
5. Data Untapped page – Replace body copy with: A high-level explanation of how River isolates your data: giving you the power to control the information you share while enabling developers to be compliant in the apps and tools they create. Header remains the same.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ animatedBackgroundColor: true
         <p class="p3">River helps you manage and make money from your data.</p>
         <ul class="p1 --no-vmargin">
           <li>River gives you full control over how social media, advertisers, and the technology you use for work and play every day can access and use your data. And we help you get paid for it.</li>
-          <li>River also helps enterprises and organizations comply with global laws designed to protect your privacy. River provides businesses the valuable compliance tools they require.</li>
+          <li>River’s valuable compliance tools help businesses, enterprises, and organizations comply with global laws designed to protect your privacy.</li>
           <li>Our model is simple: you choose the data you want to share; we provide a marketplace for you to sell it.</li>
         </ul>
         </div>
@@ -95,7 +95,7 @@ animatedBackgroundColor: true
           and organizations to influence your decisions, like buying a product or casting a vote.
         </p>
         <p class="p1">
-          Companies are investing heavily in your data, but they are getting more than they need. River helps you get paid for the information you are willing to sell while protecting the data you want to keep private. 
+          Companies are investing heavily in your data, but they are getting more than they need. River helps you get paid for the information you are willing to sell while protecting the data you want to keep private.
         </p>
         <a href="{{ site.baseurl }}{% link signup.html %}" title="Sign up for River" class="button --yellow-fill --caps --block">Stop giving away your data – sign up for river</a>
       </div>
@@ -113,17 +113,17 @@ animatedBackgroundColor: true
         <ul class="p1 --no-vmargin">
           <li>
             <p class="p1 --no-vmargin">A social environment that lets you express your data in a visually spectacular way.</p>
-            <p class="p4 --no-vmargin">Your data can be beautiful – and encrypted.</p> 
+            <p class="p4 --no-vmargin">Your data can be beautiful – and encrypted.</p>
           </li>
 
           <li>
             <p class="p1 --no-vmargin">An accessible platform that lets you share your data securely, easily, and directly.</p>
-            <p class="p4 --no-vmargin">Your data can be controlled – by you.</p> 
+            <p class="p4 --no-vmargin">Your data can be controlled – by you.</p>
           </li>
 
           <li>
             <p class="p1 --no-vmargin">A marketplace where you can get paid for sharing the data you create.</p>
-            <p class="p4 --no-vmargin">Your data can be valuable – and fun.</p> 
+            <p class="p4 --no-vmargin">Your data can be valuable – and fun.</p>
           </li>
         </ul>
         <div>
@@ -187,7 +187,7 @@ animatedBackgroundColor: true
   <section class="section --home-who-is-using-your-data-2" id="home-who-is-using-your-data-2" data-video-name="creek">
     <div class="__body">
       <p class="p2">Who is using your data?</p>
-      
+
       <div class="flex-col3">
         <div class="__card hidden-copy">
           <p class="p3">What can I do with my data?</p>
@@ -238,9 +238,7 @@ animatedBackgroundColor: true
         </div>
 
         <p class="p1 --no-vmargin hidden-copy">
-          A high-level explanation of how River isolates your data: giving you the
-          power to control the info you're sharing while enabling developers to be
-          compliant in the apps and tools they're creating.
+          A high-level explanation of how River isolates your data: giving you the power to control the information you share while enabling developers to be compliant in the apps and tools they create. Header remains the same.
         </p>
       </div>
     </div>
@@ -265,7 +263,7 @@ animatedBackgroundColor: true
         <div class="__card">
           <p class="p3">A digital marketplace</p>
           <p class="p1">
-            RiverBank is your digital marketplace, where you can sell your data, 
+            RiverBank is your digital marketplace, where you can sell your data,
             track your earnings, and access the money you've made off your data.
           </p>
         </div>
@@ -336,11 +334,14 @@ animatedBackgroundColor: true
         <li>
           <a class="p1" target="_blank" href="https://www.beyondtrust.com/blog/entry/what-is-least-privilege">What Is Least Privilege &amp; Why Do You Need It?</a>
           &mdash;
-          Matt Miller, BeyondTrust.com 
+          Matt Miller, BeyondTrust.com
         </li>
 
         <li>
           <a class="p1" target="_blank" href="https://www.youtube.com/watch?v=zjP9JYeAS5s">A path to empowering user choice and boosting user trust in advertising</a> &mdash; Tim Cook, CPDC 2021
+        </li>
+        <li>
+          <a class="p1" target="_blank" href="https://www.dear-data.com/theproject">Dear Data Project</a> &mdash; Giorgia Lupi and Stefanie Posavec
         </li>
       </ul>
       <p class="p1">Ready to start getting paid for your data?</p>
