--- a/streams.html
+++ b/streams.html
@@ -40,8 +40,8 @@ initialSection: "streams"
         </p>
 
         <p class="p1">
-          StreamS may be the coolest thing to happen to social media since the advent of the thumbs-up. For a sense of what we mean, check-out this “Dear Data” project from RIVER friend Giorgia Lupi, and her colleague Stefanie Posavec. 
-          <a class="p1" href="http://www.dear-data.com/theproject">www.dear-data.com/theproject</a>
+          StreamS may be the coolest thing to happen to social media since the advent of the thumbs-up. For a sense of what we mean, check-out this <a class="p1" href="https://www.youtube.com/watch?v=iqaVe1MCTlA">"Dear Data"</a> project from RIVER friend Giorgia Lupi, and her colleague Stefanie Posavec.
+
         </p>
 
         <p class="p1">
