Revert "Remove breadcrumbs"
This reverts commit 5650c56657e5b3172f58a83f861b7e1727a45283.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ animatedBackgroundColor: true
         <span class="p3">Profit</span> &mdash; sell only the slices of your data that you want to sell.
       </p>
     </div>
+
+    {% include breadcrumb.html teaser="Are You <br /> Creating Data?" %}
   </section>
 
   <section class="section --home-video-1" id="home-video-1" data-video-name="rough">
@@ -49,13 +51,15 @@ animatedBackgroundColor: true
           <div>
             <p class="p2 --no-vmargin __typing-text-target"></p>
           </div>
-
+        
           <p class="p1 hidden-copy">
             River gives you the ability to control where your data is being used,
             when it's being used, and who has access to it. It's your data.
           </p>
       </div>
     </div>
+
+    {% include breadcrumb.html teaser="Make Data <br /> Work <br /> for You." %}
   </section>
 
   <section class="section --your-data-belongs-to-you" id="your-data-belongs-to-you">
@@ -77,6 +81,8 @@ animatedBackgroundColor: true
         </ul>
         </div>
     </div>
+
+    {% include breadcrumb.html teaser="Dive into <br /> Your Data" %}
   </section>
 
 
@@ -100,6 +106,8 @@ animatedBackgroundColor: true
         <a href="{{ site.baseurl }}{% link signup.html %}" title="Sign up for River" class="button --yellow-fill --caps --block">Stop giving away your data – sign up for river</a>
       </div>
     </div>
+
+    {% include breadcrumb.html teaser="Get Paid for <br /> Your Data" %}
   </section>
 
     <section class="section --home-privacy-platform-2" id="home-privacy-platform-2">
@@ -141,6 +149,8 @@ animatedBackgroundColor: true
         </div>
       </div>
     </div>
+
+    {% include breadcrumb.html teaser="Rent, Sell, <br /> or Lease <br /> Your Data" %}
   </section>
 
   <section class="section --home-who-is-using-your-data" id="home-who-is-using-your-data" data-video-name="creek">
@@ -206,6 +216,8 @@ animatedBackgroundColor: true
         </div>
       </div>
     </div>
+
+    {% include breadcrumb.html teaser="Control <br /> Your Data" %}
   </section>
 
   <section class="section --home-working-with-big-tech" id="home-working-with-big-tech">
@@ -221,6 +233,8 @@ animatedBackgroundColor: true
         <li class="p1">Fine-grain permissioning keeps your data secure, while POLA enables you to choose who can see the slice of data you want to share with them.</li>
       </ul>
     </div>
+
+    {% include breadcrumb.html teaser="Dive <br /> into River." %}
   </section>
 
   <section class="section --home-data-untapped" id="home-data-untapped">
@@ -242,6 +256,8 @@ animatedBackgroundColor: true
         </p>
       </div>
     </div>
+
+    {% include breadcrumb.html teaser="Dive <br /> into River." %}
   </section>
 
   <section class="section --home-how-does-river-work" id="home-how-does-river-work" data-video-name="rough">
@@ -277,6 +293,8 @@ animatedBackgroundColor: true
         </div>
       </div>
     </div>
+
+    {% include breadcrumb.html teaser="The <br /> River MVP" %}
   </section>
 
   <section class="section --home-business-of-data" id="home-business-of-data" data-video-name="rough">
@@ -298,6 +316,8 @@ animatedBackgroundColor: true
         </p>
       </div>
     </div>
+
+    {% include breadcrumb.html teaser="Socialize Your Data" %}
   </section>
 
   <section class="section --home-resources" id="home-resources" data-video-name="rough">
